Fixes overflowing inspiration text

--- a/src/routes/Inspiration/Inspiration.scss
+++ b/src/routes/Inspiration/Inspiration.scss
@@ -34,6 +34,11 @@
       box-shadow: 0.1rem 0.1rem 4rem 2rem rgba($black, 0.06);
     }
   }
+
+  h4,
+  p {
+    overflow-wrap: break-word;
+  }
 }
 
 .inspiration__itemtitle {
